<resources>
	<string name="app_name">P2P-Clicker</string>
	<string name="empty"/>
	<string name="nullPoints">00000</string>
	<string name="clicked">+1</string>
	<string name="title">Donut clicker</string>
	<string name="backToMenu">Back to menu</string>
	<string name="name">Buy donuts per click!</string>
	<string name="tempIncrementButton">buy it: (-10 coins)</string>
	<string name="tempAutoClickButton">buy it: (-20 coins)</string>
	<string name="mAutoClick">Auto click (-200 Multiplayer coins)</string>
	<string name="mIncrementClick">Increment click +1 (-100 Multiplayer coins)</string>
	<string name="shop">Go to shop</string>
	<string name="shopTitle">Shop</string>
	<string name="gameTitle">Chain Clicker</string>
	<string name="newGame">New game</string>
	<string name="statistic">Statistics</string>
	<string name="startTitle">P2P Clicker</string>
	<string name="endGame">The end!</string>
	<string name="titleDialog">Game over</string>
	<string name="ok">OK</string>
	<string name="statisticsDesc">You won</string>
	<string name="diagrammTitle">Diagram</string>
	<string name="multiplayer">Multiplayer</string>
	<string name="opponents_header">Choose your destiny</string>
	<string name="genesis_block">Genesis</string>
	<string name="update">Update opponent list</string>
	<string name="back">Back</string>
	<string name="opponent_icon_description">Opponent icon</string>
	<string name="round_over">Round over</string>
	<string name="test_filler">Test filler</string>
	<string name="dialog_instruction">Please, enter message for your opponent</string>
	<string name="you_lose">You lose…</string>
	<string name="you_win">You win!!!</string>
	<string name="dialog_message_for_opponent">Message for opponent</string>
	<string name="settings">Settings</string>
	<string name="statisticText">Statistic</string>
	<string name="multiplayerText">Multiplayer</string>
	<string name="new_gameText">New game</string>
	<string name="imageofdonutText">imageOfDonut</string>
	<string name="warning_title">Warning</string>
	<string name="gameSaves">game_saves</string>
	<string name="coins">Coins:</string>
	<string name="DPC">Donuts Per Click:</string>
	<string name="clearGameSaves">Clear game saves</string>
	<string name="IncClick">Increment Click (-10 coins)</string>
	<string name="AutoClick">AutoClick (-20 coins)</string>
	<string name="multiplayer_coins">Multiplayer Coins:</string>
	<string name="select">Select</string>
	<string name="cancel">Cancel</string>
	<string name="waiting_opponent">Waiting opponent…</string>
	<string name="multiplayer_auto_clicks">Multiplayer Auto Clicks:</string>
	<string name="dialog_acceptance_message">Are you ready for epic donut battle with…</string>
	<string name="question_mark">\?</string>
	<string name="resolve_ip">Resolve IP</string>
    <string name="buy">Buy</string>
	<string name="regular_inc">Regular Inc \n(-10 multicoins)</string>
	<string name="regular_autoclick">Regular AutoClick\n(-20 multicoins)</string>
	<string name="current_level">Level </string>
	<string name="autoclick_coins">AutoClick \n(- 20 coins)</string>
	<string name="incclick_coins">IncClick \n(-10 coins)</string>
</resources>
