<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/shopImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_shop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/tempIncrementClick"
            app:layout_constraintRight_toRightOf="@id/tempIncrementClick"
            android:textSize="40sp"
            android:textColor="@color/colorTitle"
            android:textStyle="bold"
            android:text="@string/shopTitle"/>
        <TextView
            app:layout_constraintTop_toBottomOf="@id/shopImg"
            android:id="@+id/nameShop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTitle"
            android:text="@string/name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:gravity="center_horizontal"
            android:textSize="32sp"/>


        <Button
            android:id="@+id/tempIncrementClick"
            style="@style/ButtonInShop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameShop"
            android:text="@string/tempIncrementButton"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/tempAutoClick"
            style="@style/ButtonInShop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tempIncrementClick"
            android:text="@string/tempAutoClickButton"
            android:onClick="onClick"
            />


        <Button
            android:id="@+id/mAutoClick"
            style="@style/ButtonInShop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tempAutoClick"
            android:text="@string/mAutoClick"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/mIncrementClick"
            style="@style/ButtonInShop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mAutoClick"
            android:text="@string/mIncrementClick"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mIncrementClick"
            android:drawableLeft="@drawable/icon_back"
            android:layout_marginTop="20dp"
            android:background="@color/btnBack"
            android:text="@string/backToMenu"
            android:paddingRight="10dp"
            android:onClick="onClick"
            android:textSize="24sp"
            android:textColor="@color/btnText" />
        <TextView
            android:id="@+id/clicksTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnBack"
            android:text="@string/clicks"
            />

        <TextView
            android:id="@+id/mClicksTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clicksTextView"
            android:text="@string/multiplayer_clicks"
            />

        <TextView
            android:id="@+id/donutPerClickTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mClicksTextView"
            android:text="@string/DPC"
            />

        <TextView
            android:id="@+id/multiplayerAutoClicksTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/donutPerClickTextView"
            android:text="@string/multiplayer_auto_clicks"
            />



    </android.support.constraint.ConstraintLayout>

</ScrollView>