<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F0D1"

    tools:context="ru.rienel.clicker.activity.main.MainActivity">

<RelativeLayout
    android:layout_width="match_parent"
	android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    android:layout_marginStart="40dp"
    android:layout_marginEnd="40dp"
    android:layout_marginBottom="5dp"
    >

    <ImageView
        android:id="@+id/imageDonut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/imageofdonutText"
        app:srcCompat="@drawable/donut"
       />

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:id="@+id/activity_main"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@+id/imageDonut"
		android:layout_alignParentStart="true">


		<Button
            style="@style/TextStyle"
			android:id="@+id/start"
			android:layout_width="match_parent"
			android:layout_height="65dp"
			android:layout_centerInParent="true"
			android:background="@drawable/buttons_style"
			android:text="@string/new_gameText"
			app:layout_constraintBottom_toTopOf="@+id/multiplayer"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.5"
			app:layout_constraintHorizontal_chainStyle="packed"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_chainStyle="packed" />

		<Button
			android:id="@+id/multiplayer"
			android:layout_width="match_parent"
			android:layout_height="65dp"
			android:layout_centerInParent="true"
			android:background="@drawable/buttons_style"
			android:text="@string/multiplayerText"
			style="@style/TextStyle"
			app:layout_constraintBottom_toTopOf="@+id/statistic"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.5"
			app:layout_constraintHorizontal_chainStyle="packed"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/start" />

		<Button
			android:id="@+id/statistic"
			android:layout_width="match_parent"
			android:layout_height="65dp"
			android:layout_below="@+id/multiplayer"
			android:layout_centerInParent="true"
			android:background="@drawable/buttons_style"
			android:text="@string/statisticText"
			style="@style/TextStyle"
			app:layout_constraintBottom_toTopOf="@+id/settings"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.5"
			app:layout_constraintHorizontal_chainStyle="packed"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/multiplayer" />

		<Button
			android:id="@+id/settings"
			android:layout_width="match_parent"
			android:layout_height="65dp"
			android:layout_centerInParent="true"
			android:background="@drawable/buttons_style"
			android:text="@string/settings"
			style="@style/TextStyle"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.495"
			app:layout_constraintHorizontal_chainStyle="packed"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/statistic" />


    </android.support.constraint.ConstraintLayout>


</RelativeLayout>

</android.support.constraint.ConstraintLayout>