<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="#F3F0D1">

	<TextView
			android:id="@+id/title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/title"
			android:textColor="@color/colorTitle"
			android:textSize="40sp"
			android:layout_centerHorizontal="true"/>

	<TextView
			android:id="@+id/time"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_below="@id/title"
			android:textSize="18sp"/>



	<com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
		android:id="@+id/progressBarB"
		android:layout_width="match_parent"
		android:layout_marginStart="70dp"
		android:layout_height="30dp"
		app:rcMax="20"
		app:rcRadius="50dp"
		app:rcBackgroundPadding="1dp"
		app:rcReverse="false"
		app:rcProgressColor="#C85108"
		app:rcBackgroundColor="#E29C68"
		android:layout_below="@id/time"
		android:layout_centerHorizontal="true"/>


	<TextView
			android:id="@+id/stopwatch"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_below="@id/progressBarB"
			android:textColor="@color/colorTitle"
			android:textSize="32sp"/>


	<ImageView
			android:id="@+id/donut"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/stopwatch"
			android:background="@drawable/donut_for_game"
			android:scaleType="center"
			android:soundEffectsEnabled="false"
			android:layout_centerHorizontal="true"/>

	<TextView
			android:id="@+id/newClick"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_centerVertical="true"
			android:textSize="26sp"
			android:textColor="@color/colorToast"/>

	<TextView
			android:id="@+id/tvClicks"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="20dp"
			android:paddingTop="20dp"
			android:textSize="32sp"
			android:layout_centerHorizontal="true"
			android:layout_below="@id/donut"/>


	<Button
			android:id="@+id/btnIncTap"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/IncClick"
			android:layout_below="@id/tvClicks"
			style="@style/Widget.AppCompat.Button.Colored"/>

	<Button
			android:id="@+id/btnAutoTap"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/AutoClick"
			android:layout_below="@id/tvClicks"
			android:layout_toEndOf="@id/btnIncTap"
			style="@style/Widget.AppCompat.Button.Colored"/>
</RelativeLayout>